// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerificationCode renders correctly with default values 1`] = `
<DocumentFragment>
  .css-uxqmnp-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d4dae7;
  font-size: 24px;
  color: #4a4f62;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-uxqmnp-StyledInput-VerificationCode:hover,
.css-uxqmnp-StyledInput-VerificationCode:focus {
  border-color: #4f0599;
}

.css-uxqmnp-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-uxqmnp-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-uxqmnp-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode::-moz-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode::placeholder {
  color: #b2b6c3;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="0"
      id=":r0:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="1"
      id=":r0:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="2"
      id=":r0:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="3"
      id=":r0:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode renders correctly with initial value and placeholder and 6 fields 1`] = `
<DocumentFragment>
  .css-uxqmnp-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d4dae7;
  font-size: 24px;
  color: #4a4f62;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-uxqmnp-StyledInput-VerificationCode:hover,
.css-uxqmnp-StyledInput-VerificationCode:focus {
  border-color: #4f0599;
}

.css-uxqmnp-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-uxqmnp-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-uxqmnp-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode::-moz-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode::placeholder {
  color: #b2b6c3;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="0"
      id=":r1:-0"
      pattern="[0-9]*"
      placeholder="0"
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="1"
      id=":r1:-1"
      pattern="[0-9]*"
      placeholder="0"
      type="tel"
      value="3"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="2"
      id=":r1:-2"
      pattern="[0-9]*"
      placeholder="3"
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="3"
      id=":r1:-3"
      pattern="[0-9]*"
      placeholder="7"
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 4"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="4"
      id=":r1:-4"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 5"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="5"
      id=":r1:-5"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle and replace non number with "" when type is number 1`] = `
<DocumentFragment>
  .css-uxqmnp-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d4dae7;
  font-size: 24px;
  color: #4a4f62;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-uxqmnp-StyledInput-VerificationCode:hover,
.css-uxqmnp-StyledInput-VerificationCode:focus {
  border-color: #4f0599;
}

.css-uxqmnp-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-uxqmnp-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-uxqmnp-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode::-moz-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode::placeholder {
  color: #b2b6c3;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="0"
      id=":r4:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="1"
      id=":r4:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="2"
      id=":r4:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="3"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="3"
      id=":r4:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="4"
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle error 1`] = `
<DocumentFragment>
  .css-3q3dda-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #dd3252;
  font-size: 24px;
  color: #dd3252;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-3q3dda-StyledInput-VerificationCode:hover,
.css-3q3dda-StyledInput-VerificationCode:focus {
  border-color: #a6102d;
}

.css-3q3dda-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #DD325240;
}

.css-3q3dda-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-3q3dda-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b2b6c3;
}

.css-3q3dda-StyledInput-VerificationCode::-moz-placeholder {
  color: #b2b6c3;
}

.css-3q3dda-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b2b6c3;
}

.css-3q3dda-StyledInput-VerificationCode::placeholder {
  color: #b2b6c3;
}

<div>
    <input
      aria-invalid="true"
      aria-label="Verification code 0"
      class="css-3q3dda-StyledInput-VerificationCode e1odpyad0"
      data-testid="0"
      id=":r9:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="true"
      aria-label="Verification code 1"
      class="css-3q3dda-StyledInput-VerificationCode e1odpyad0"
      data-testid="1"
      id=":r9:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="true"
      aria-label="Verification code 2"
      class="css-3q3dda-StyledInput-VerificationCode e1odpyad0"
      data-testid="2"
      id=":r9:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="true"
      aria-label="Verification code 3"
      class="css-3q3dda-StyledInput-VerificationCode e1odpyad0"
      data-testid="3"
      id=":r9:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle keyDown and special key cases and focus/change events 1`] = `
<DocumentFragment>
  .css-uxqmnp-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d4dae7;
  font-size: 24px;
  color: #4a4f62;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-uxqmnp-StyledInput-VerificationCode:hover,
.css-uxqmnp-StyledInput-VerificationCode:focus {
  border-color: #4f0599;
}

.css-uxqmnp-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-uxqmnp-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-uxqmnp-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode::-moz-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode::placeholder {
  color: #b2b6c3;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="0"
      id=":r2:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="1"
      id=":r2:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="2"
      id=":r2:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="3"
      id=":r2:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle paste when type is not number 1`] = `
<DocumentFragment>
  .css-uxqmnp-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d4dae7;
  font-size: 24px;
  color: #4a4f62;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-uxqmnp-StyledInput-VerificationCode:hover,
.css-uxqmnp-StyledInput-VerificationCode:focus {
  border-color: #4f0599;
}

.css-uxqmnp-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-uxqmnp-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-uxqmnp-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode::-moz-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode::placeholder {
  color: #b2b6c3;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="0"
      id=":r7:-0"
      placeholder=""
      type="text"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="1"
      id=":r7:-1"
      placeholder=""
      type="text"
      value="h"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="2"
      id=":r7:-2"
      placeholder=""
      type="text"
      value="2"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="3"
      id=":r7:-3"
      placeholder=""
      type="text"
      value="3"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 4"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="4"
      id=":r7:-4"
      placeholder=""
      type="text"
      value="a"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 5"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="5"
      id=":r7:-5"
      placeholder=""
      type="text"
      value="*"
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle paste with no overflowing values 1`] = `
<DocumentFragment>
  .css-uxqmnp-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d4dae7;
  font-size: 24px;
  color: #4a4f62;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-uxqmnp-StyledInput-VerificationCode:hover,
.css-uxqmnp-StyledInput-VerificationCode:focus {
  border-color: #4f0599;
}

.css-uxqmnp-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-uxqmnp-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-uxqmnp-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode::-moz-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode::placeholder {
  color: #b2b6c3;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="0"
      id=":r3:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="1"
      id=":r3:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="2"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="2"
      id=":r3:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="3"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="3"
      id=":r3:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="4"
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle paste with overflowing values 1`] = `
<DocumentFragment>
  .css-uxqmnp-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d4dae7;
  font-size: 24px;
  color: #4a4f62;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-uxqmnp-StyledInput-VerificationCode:hover,
.css-uxqmnp-StyledInput-VerificationCode:focus {
  border-color: #4f0599;
}

.css-uxqmnp-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-uxqmnp-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-uxqmnp-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode::-moz-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode::placeholder {
  color: #b2b6c3;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="0"
      id=":r5:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="1"
      id=":r5:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="2"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="2"
      id=":r5:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="3"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="3"
      id=":r5:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="4"
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle paste with overflowing values at different index than 0 1`] = `
<DocumentFragment>
  .css-uxqmnp-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d4dae7;
  font-size: 24px;
  color: #4a4f62;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-uxqmnp-StyledInput-VerificationCode:hover,
.css-uxqmnp-StyledInput-VerificationCode:focus {
  border-color: #4f0599;
}

.css-uxqmnp-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-uxqmnp-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-uxqmnp-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode::-moz-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b2b6c3;
}

.css-uxqmnp-StyledInput-VerificationCode::placeholder {
  color: #b2b6c3;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="0"
      id=":r6:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="1"
      id=":r6:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="2"
      id=":r6:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="2"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="css-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-testid="3"
      id=":r6:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="3"
    />
  </div>
</DocumentFragment>
`;
